--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_timetable">Timetable</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_task">Task</string>
+    <string name="title_notification_empty">No Items</string>
 </resources>
