--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_task">Task</string>
     <string name="title_notification_empty">No Items</string>
-    <string name="title_settings">settings</string>
+    <string name="title_settings">Settings</string>
 </resources>
