--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_notification_empty">No Items</string>
     <string name="title_settings">Settings</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_task">TaskActivity</string>
 </resources>
