--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_task">TaskActivity</string>
     <string name="title_attendance">Attendance</string>
+    <string name="title_activity_notify">NotifyActivity</string>
 </resources>
